--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,30 +7,36 @@ license = "Apache-2.0"
 description = "A command-line interface for CodeCLI powered by Memex"
 repository = "https://github.com/chaorenex/memex_cli"
 
-
-[workspace]
-resolver = "2"
-members = [
-  "crates/mem-codecli",
-  "crates/core",
-  "crates/mem-client",
-  "crates/policy-engine",
-  "crates/testkit"
-]
-
-[workspace.dependencies]
-tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread"] }
+[dependencies]
+tokio = { version = "^1.37", features = ["process", "io-util", "macros", "signal", "rt-multi-thread", "io-std"] }
 clap = { version = "^4.5", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 thiserror = "^1.0"
 tracing = "^0.1"
-tracing-subscriber = "^0.3"
+tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
 anyhow = "^1.0"
 async-trait = "^0.1"
 bytes = "^1.5"
-reqwest = { version = "^0.11", features = ["json"] }
+reqwest = { version = "^0.11", features = ["json","rustls-tls"] }
 chrono = { version = "^0.4", features = ["serde"] }
+toml = "0.8"
 futures = "^0.3"
 regex = "^1.10"
 uuid = { version = "^1.6", features = ["v4"] }
+
+[dev-dependencies]
+tokio-test = "^0.4"
+tempfile = "^3.6"
+mockito = "^1.3"
+pretty_assertions = "^1.3"
+
+[profile.release]
+opt-level = "z"
+lto = true  
+codegen-units = 1
+
+[profile.dev]
+opt-level = 1
+lto = false
+codegen-units = 16
