--- a/config.toml
+++ b/config.toml
@@ -42,6 +42,8 @@ min_level_inject = 2
 min_level_fallback = 1
 block_if_consecutive_fail_ge = 3
 skip_if_top1_score_ge = 0.85
+digest_head_chars = 80
+digest_tail_chars = 80
 exclude_stale_by_default = true
 active_statuses = ["active", "verified"]
 
@@ -51,6 +53,8 @@ max_answer_chars = 1200
 min_answer_chars = 200
 context_lines = 8
 tool_steps_max = 5
+tool_step_args_keys_max = 16
+tool_step_value_max_chars = 140
 redact = true
 strict_secret_block = true
 confidence = 0.45
