--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
 anyhow = "^1.0"
 async-trait = "^0.1"
 bytes = "^1.5"
-reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
 chrono = { version = "^0.4", features = ["serde"] }
 toml = "0.8"
 futures = "^0.3"
