--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ clap = { version = "^4.5", features = ["derive"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 thiserror = "^1.0"
-tracing = "^0.1"
+tracing = { version = "^0.1", features = ["attributes"] }
 tracing-subscriber = { version = "^0.3", features = ["env-filter", "fmt"] }
+tracing-appender = "^0.2"
 anyhow = "^1.0"
 async-trait = "^0.1"
 bytes = "^1.5"
@@ -53,3 +54,9 @@ panic = 'unwind'
 incremental = false
 codegen-units = 1
 rpath = false
+
+[profile.size-release]
+inherits = "release"
+opt-level = "z"
+panic = "abort"
+strip = true
