--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -12,17 +12,9 @@ memex-core = { workspace = true}
 memex-plugins = { workspace = true}
 tokio = { workspace = true}
 clap = { workspace = true}
-serde = { workspace = true}
 serde_json = { workspace = true}
-thiserror = { workspace = true}
 tracing = { workspace = true}
 tracing-subscriber = { workspace = true}
-anyhow = { workspace = true}
-async-trait = { workspace = true}
-bytes = { workspace = true}
-reqwest = { workspace = true}
 chrono = { workspace = true}
-toml = { workspace = true}
-futures = { workspace = true}
-regex = { workspace = true}
 uuid = { workspace = true}
+tracing-appender = { workspace = true}
