Add toolchain specification to Rust installation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
+          toolchain: stable
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
