Implement TUI with ratatui library for enhanced user interface
- Added TUI drawing logic in cli/src/tui/ui.rs, including header, main content, and input handling.
- Created a new TuiEvent enum in core/src/tui.rs to manage various TUI events.
- Developed a comprehensive State Management Usage Guide in docs/STATE-USAGE-GUIDE.md for developers and end-users.
- Documented TUI feature list in docs/tui-feature-list.txt, detailing UI design, interaction, and performance optimizations.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,3 +18,9 @@ tracing-subscriber = { workspace = true}
 chrono = { workspace = true}
 uuid = { workspace = true}
 tracing-appender = { workspace = true}
+ratatui = { workspace = true}
+crossterm = { workspace = true}
+atty = { workspace = true}
+
+[lints]
+workspace = true
