--- a/plugins/Cargo.toml
+++ b/plugins/Cargo.toml
@@ -16,3 +16,6 @@ async-trait = { workspace = true}
 reqwest = { workspace = true}
 chrono = { workspace = true}
 futures = { workspace = true}
+
+[lints]
+workspace = true
