Implement TUI flow with event handling and terminal management
- Added `flow` module with submodules for TUI and standard flows.
- Implemented TUI event loop in `loop_run.rs` to handle user input and application state.
- Created prompt functionality in `prompt.rs` for user input within TUI.
- Developed terminal setup and restoration functions in `terminal.rs` to manage terminal state.
- Enhanced environment variable parsing in `utils.rs` for better error handling.
- Documented the startup flow and TUI exit issues in markdown files for better understanding and troubleshooting.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -21,6 +21,7 @@ tracing-appender = { workspace = true}
 ratatui = { workspace = true}
 crossterm = { workspace = true}
 atty = { workspace = true}
+arboard = "3.4"
 
 [lints]
 workspace = true
