Refactor runner module: Introduce new control and policy handling
- Removed the existing tee.rs file and replaced it with io_pump.rs for better separation of concerns in handling I/O operations.
- Added abort.rs to manage session abort sequences based on policy violations.
- Introduced control.rs to handle control commands and communication with the runner.
- Implemented a new policy engine in policy.rs to manage tool request approvals and denials.
- Enhanced runtime.rs to integrate the new policy and control mechanisms, improving session management.
- Added state_report.rs to track and report session state changes and tool event processing.
- Updated the engine module to accommodate the new runner structure and ensure compatibility with existing functionality.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -22,6 +22,8 @@ ratatui = { workspace = true}
 crossterm = { workspace = true}
 atty = { workspace = true}
 arboard = "3.4"
+anyhow = { workspace = true }
+async-trait = { workspace = true }
 
 [lints]
 workspace = true
