feat: 更新 release.yml，添加 .env.online 和 .env.offline 文件；优化 README，调整环境变量说明

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,8 @@ jobs:
             install_memex.sh
             install_memex.bat
             install_memex.py
+            .env.online
+            .env.offline
 
   upload-assets:
     needs: create-release
