feat: 添加可选的 memex-env 脚本安装功能，支持在安装过程中下载和配置环境脚本

--- a/npm/memex-cli/package.json
+++ b/npm/memex-cli/package.json
@@ -12,8 +12,12 @@
                 "memex-cli":  "bin.js"
             },
     "files":  [
-                  "bin.js"
+                  "bin.js",
+                  "scripts/"
               ],
+    "scripts":  {
+                    "postinstall":  "node -e \"console.log('\\n💡 Tip: memex-env scripts available in node_modules/memex-cli/scripts/\\n')\""
+                },
     "optionalDependencies":  {
                                  "@memex-cli/darwin-arm64":  "1.0.4",
                                  "@memex-cli/darwin-x64":  "1.0.4",
