--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,7 @@ tempfile = "^3.6"
 mockito = "^1.3"
 pretty_assertions = "^1.3"
 criterion = { version = "0.5", features = ["html_reports"] }
+winres = "0.1"
 
 [profile.dev]
 opt-level = 0
