--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,21 @@ jobs:
         run: |
           echo "## 🚀 Release v${{ steps.version.outputs.VERSION }}" > RELEASE_NOTES.md
           echo "" >> RELEASE_NOTES.md
+          echo "### 📦 Quick Install" >> RELEASE_NOTES.md
+          echo "" >> RELEASE_NOTES.md
+          echo "**Linux / macOS:**" >> RELEASE_NOTES.md
+          echo "\`\`\`bash" >> RELEASE_NOTES.md
+          echo "curl -sSL https://github.com/chaorenex1/memex-cli/releases/latest/download/install_memex.sh | bash" >> RELEASE_NOTES.md
+          echo "\`\`\`" >> RELEASE_NOTES.md
+          echo "" >> RELEASE_NOTES.md
+          echo "**Windows (PowerShell):**" >> RELEASE_NOTES.md
+          echo "\`\`\`powershell" >> RELEASE_NOTES.md
+          echo "irm https://github.com/chaorenex1/memex-cli/releases/latest/download/install_memex.bat | iex" >> RELEASE_NOTES.md
+          echo "\`\`\`" >> RELEASE_NOTES.md
+          echo "" >> RELEASE_NOTES.md
           echo "### 📦 Assets" >> RELEASE_NOTES.md
+          echo "- \`install_memex.sh.tar.gz\` - Installer script for Linux/macOS" >> RELEASE_NOTES.md
+          echo "- \`install_memex.bat.zip\` - Installer script for Windows" >> RELEASE_NOTES.md
           echo "- \`memex-cli-aarch64-apple-darwin.tar.gz\` - macOS ARM64 (Apple Silicon)" >> RELEASE_NOTES.md
           echo "- \`memex-cli-x86_64-apple-darwin.tar.gz\` - macOS Intel" >> RELEASE_NOTES.md
           echo "- \`memex-cli-x86_64-unknown-linux-gnu.tar.gz\` - Linux x64" >> RELEASE_NOTES.md
@@ -207,5 +221,25 @@ jobs:
           files: |
             release-artifacts/memex-env-scripts.tar.gz
             release-artifacts/memex-env-scripts.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Package install_memex scripts for release
+        run: |
+          mkdir -p release-artifacts/installer
+          cp install_memex.sh install_memex.bat release-artifacts/installer/
+          # Also create archived versions for direct download
+          cd release-artifacts/installer
+          tar -czf ../install_memex.sh.tar.gz install_memex.sh
+          zip -r ../install_memex.bat.zip install_memex.bat
+
+      - name: Upload install_memex scripts to release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            release-artifacts/installer/install_memex.sh
+            release-artifacts/installer/install_memex.bat
+            release-artifacts/installer/install_memex.sh.tar.gz
+            release-artifacts/installer/install_memex.bat.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
