chore: update dependencies, configuration, and core plugins
Dependencies:
- Update Cargo.lock with latest dependency versions
- Add new workspace dependencies (arrow, lancedb, candle)
- Update CLI and core Cargo.toml configurations

Configuration:
- Add SyncStrategy and EmbeddingProvider to config types
- Add ConflictResolution enum for sync operations
- Update config.toml with new options
- Improve config loading with better defaults

Core Plugins:
- Update factory.rs for new memory providers
- Update services.rs with syncable memory support
- Improve plan.rs with better error handling

Runner & Executor:
- Enhanced output.rs with new event types
- Improved runtime.rs with better signal handling
- Updated engine.rs and graph.rs for performance

Gatekeeper:
- Better decision.rs logic for quality gates
- Improved evaluate.rs with context awareness

Cleanup:
- Remove deprecated http_server.rs command
- Remove unused task_level.rs
- Remove unused utils/project_id.rs (moved to core)
- Delete obsolete integration tests

Installation Scripts:
- Update install_memex.py with npm support
- Update install_memex.ps1 for Windows
- Improve memory scripts with better error handling

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -35,20 +35,30 @@ tracing-appender = { workspace = true }
 # Time & UUID
 chrono = { workspace = true }
 uuid = { workspace = true }
+shellexpand = { workspace = true }
 
 # TUI (Terminal UI)
 ratatui = { workspace = true }
 crossterm = { workspace = true }
 atty = { workspace = true }
 
+# HTTP client (for daemon)
+reqwest = { workspace = true }
+futures = { workspace = true }
+
 # HTTP server
 axum = { workspace = true }
 tower = { workspace = true }
-tower-http = { workspace = true, features = ["fs"] }
+tower-http = { workspace = true, features = ["fs", "cors", "trace", "timeout"] }
+bytes = { workspace = true }
+async-stream = { workspace = true }
 
 # System utilities
 arboard = { workspace = true }
 dirs = { workspace = true }
+
+[target.'cfg(windows)'.dependencies]
+windows = { workspace = true }
 
 [build-dependencies]
 # Windows resource compiler for embedding icon and version info
