--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,48 +37,69 @@ tracing-appender = "^0.2"
 # HTTP client
 reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
 bytes = "^1.5"
+async-stream = "^0.3"
+
+# Platform-specific
+windows = { version = "0.58", features = ["Win32_System_Threading"] }
 
 # Time & UUID
 chrono = { version = "^0.4", features = ["serde"] }
-uuid = { version = "1.8", features = ["v4"] }
+uuid = { version = "^1.8", features = ["v4"] }
 
 # Text & regex
 regex = "^1.10"
-encoding_rs = "0.8"
+encoding_rs = "^0.8"
 
 # TUI (Terminal UI)
-ratatui = "0.28"
-crossterm = "0.28"
-atty = "0.2"
-indicatif = "0.17"  # Progress bars
+ratatui = "^0.28"
+crossterm = "^0.28"
+atty = "^0.2"
+indicatif = "^0.17"  # Progress bars
 
 # HTTP server (CLI specific)
-axum = "0.7"
-tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
+axum = "^0.7"
+tower = { version = "^0.4", features = ["util"] }
+tower-http = { version = "^0.5", features = ["cors", "trace", "timeout"] }
 
 # System utilities (CLI specific)
-arboard = "3.4"      # Clipboard
-dirs = "5.0"         # User directories
+arboard = "^3.4"      # Clipboard
+dirs = "^5.0"         # User directories
 
 # File operations (Core optimization)
-base64 = "0.22"      # Base64 encoding
-glob = "0.3"         # File pattern matching
+base64 = "^0.22"      # Base64 encoding
+glob = "^0.3"         # File pattern matching
 
 # Performance optimization (Core Level 2-3)
-sysinfo = "0.30"     # CPU monitoring (Level 2.2 dynamic concurrency)
-lru = "0.12"         # LRU cache (Level 3.3 file cache)
-memmap2 = "0.9"      # Memory-mapped files (Level 3.1 large file optimization)
-lazy_static = "1.4"  # Static variables (event buffer, file cache)
-num_cpus = "1.16"    # CPU core detection
+sysinfo = "^0.30"     # CPU monitoring (Level 2.2 dynamic concurrency)
+lru = "^0.12"         # LRU cache (Level 3.3 file cache)
+memmap2 = "^0.9"      # Memory-mapped files (Level 3.1 large file optimization)
+lazy_static = "^1.4"  # Static variables (event buffer, file cache)
+num_cpus = "^1.16"    # CPU core detection
 
+# Local memory storage (LanceDB)
+lancedb = "^0.23"                      # Vector database for local memory
+arrow = { version = "^56", features = ["ffi"] }
+arrow-array = "^56"
+arrow-schema = "^56"
+arrow-buffer = "^56"                  # Buffer types for Arrow arrays
+shellexpand = "^3.0"                  # Home directory expansion
+stream = "^0.1"                       # Stream utilities
+
+# Local embedding (CPU/GPU inference)
+candle-core = "^0.6"                  # Core candle types
+candle-nn = "^0.6"                    # Neural network modules
+candle-transformers = "^0.6"          # Transformer models
+candle-examples = "^0.6"              # Model utilities
+tokenizers = "^0.20"                  # Tokenization
+hf-hub = "^0.3"                       # Hugging Face hub API
 # Development dependencies
 tokio-test = "^0.4"
 tempfile = "^3.6"
 mockito = "^1.3"
 pretty_assertions = "^1.3"
-criterion = { version = "0.5", features = ["html_reports"] }
-winres = "0.1"
+criterion = { version = "^0.5", features = ["html_reports"] }
+winres = "^0.1"
+which = "^7.0"        # Build dependency for protoc detection
 
 [profile.dev]
 opt-level = 0
