--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install protoc (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+        
+      - name: Install protoc (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install protoc -y
+          echo "C:\Program Files\protobuf\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
       - name: Install Rust (stable)
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -58,6 +68,10 @@ jobs:
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
+
+      - name: Set PROTOC env (Windows)
+        if: matrix.os == 'windows-latest'
+        run: echo "PROTOC=C:\Program Files\protobuf\bin\protoc.exe" >> $env:GITHUB_ENV
 
       - name: cargo test
         run: cargo test --workspace
