--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,12 +88,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install protoc (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler
+
+      - name: Install protoc (macOS)
+        if: matrix.os == 'macos-latest'
+        run: brew install protobuf
+
+      - name: Install protoc (Windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          choco install protoc -y
+          echo "C:\Program Files\protobuf\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
       - name: Show version info
         run: |
           echo "Building memex-cli for ${{ matrix.target }}"
           echo "Git ref: ${{ github.ref }}"
           echo "Version: ${GITHUB_REF#refs/tags/v}"
         shell: bash
+
+      - name: Set PROTOC env (Windows)
+        if: matrix.os == 'windows-latest'
+        run: echo "PROTOC=C:\Program Files\protobuf\bin\protoc.exe" >> $env:GITHUB_ENV
 
       - name: Install cross-compilation tools
         uses: taiki-e/setup-cross-toolchain-action@v1
