--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,8 +58,18 @@ jobs:
       - name: Install protoc (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          choco install protoc -y
-          echo "C:\Program Files\protobuf\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          $PROTOC_VERSION = "27.0"
+          $PROTOC_URL = "https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/protoc-$PROTOC_VERSION-win64.zip"
+          $PROTOC_DIR = "$env:USERPROFILE\.protoc"
+          $PROTOC_ZIP = "$env:TEMP\protoc.zip"
+
+          # Download and extract protoc
+          Invoke-WebRequest -Uri $PROTOC_URL -OutFile $PROTOC_ZIP
+          Expand-Archive -Path $PROTOC_ZIP -DestinationPath $PROTOC_DIR -Force
+
+          # Add to PATH
+          echo "$PROTOC_DIR\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "PROTOC=$PROTOC_DIR\bin\protoc.exe" >> $env:GITHUB_ENV
 
       - name: Install Rust (stable)
         uses: dtolnay/rust-toolchain@stable
@@ -68,10 +78,6 @@ jobs:
 
       - name: Rust cache
         uses: Swatinem/rust-cache@v2
-
-      - name: Set PROTOC env (Windows)
-        if: matrix.os == 'windows-latest'
-        run: echo "PROTOC=C:\Program Files\protobuf\bin\protoc.exe" >> $env:GITHUB_ENV
 
       - name: cargo test
         run: cargo test --workspace
