--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,9 +98,20 @@ jobs:
 
       - name: Install protoc (Windows)
         if: matrix.os == 'windows-latest'
+        shell: pwsh
         run: |
-          choco install protoc -y
-          echo "C:\Program Files\protobuf\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          $PROTOC_VERSION = "27.0"
+          $PROTOC_URL = "https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/protoc-$PROTOC_VERSION-win64.zip"
+          $PROTOC_DIR = "$env:USERPROFILE\.protoc"
+          $PROTOC_ZIP = "$env:TEMP\protoc.zip"
+
+          # Download and extract protoc
+          Invoke-WebRequest -Uri $PROTOC_URL -OutFile $PROTOC_ZIP
+          Expand-Archive -Path $PROTOC_ZIP -DestinationPath $PROTOC_DIR -Force
+
+          # Add to PATH
+          echo "$PROTOC_DIR\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "PROTOC=$PROTOC_DIR\bin\protoc.exe" >> $env:GITHUB_ENV
 
       - name: Show version info
         run: |
@@ -108,10 +119,6 @@ jobs:
           echo "Git ref: ${{ github.ref }}"
           echo "Version: ${GITHUB_REF#refs/tags/v}"
         shell: bash
-
-      - name: Set PROTOC env (Windows)
-        if: matrix.os == 'windows-latest'
-        run: echo "PROTOC=C:\Program Files\protobuf\bin\protoc.exe" >> $env:GITHUB_ENV
 
       - name: Install cross-compilation tools
         uses: taiki-e/setup-cross-toolchain-action@v1
