--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["chaorenex1"]
 license = "Apache-2.0"
 description = "Core logic for CodeCLI powered by Memex"
-repository = "https://github.com/chaorenex/memex-cli"
+repository = "https://github.com/chaorenex1/memex-cli"
 
 [dependencies]
 # Workspace members
@@ -34,26 +34,26 @@ tracing-appender = { workspace = true }
 
 # Time & UUID
 chrono = { workspace = true }
-uuid = { workspace = true }
-shellexpand = { workspace = true }
+uuid = { workspace = true, features = ["serde", "v4"] }
+shellexpand = { workspace = true}
 
-# TUI (Terminal UI)
-ratatui = { workspace = true }
-crossterm = { workspace = true }
-atty = { workspace = true }
+# Optional TUI dependencies
+ratatui = { workspace = true}
+crossterm = { workspace = true}
+atty = { workspace = true}
 
 # HTTP client (for daemon)
 reqwest = { workspace = true }
 futures = { workspace = true }
 
-# HTTP server
+# Optional HTTP server dependencies
 axum = { workspace = true }
-tower = { workspace = true }
-tower-http = { workspace = true, features = ["fs", "cors", "trace", "timeout"] }
+tower = { workspace = true}
+tower-http = { workspace = true,features = ["util"]}
 bytes = { workspace = true }
 async-stream = { workspace = true }
 
-# System utilities
+# Optional system utilities
 arboard = { workspace = true }
 dirs = { workspace = true }
 
