--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
             npm-dir: linux-x64
             binary: memex-cli
           - target: x86_64-apple-darwin
-            os: macos-13
+            os: macos-15-intel
             npm-dir: darwin-x64
             binary: memex-cli
           - target: x86_64-pc-windows-msvc
